<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">simpleCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="display"></string>
    <string name="one">1</string>
    <string name="second">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>

</resources>
