<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.example.simplecalculator.MainActivity" >
    
    <Button
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculatorDisplay"
        android:layout_marginTop="17dp"
        android:text="@string/one" />

    <Button
        android:id="@+id/num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/num1"
        android:layout_below="@+id/num1"
        android:text="@string/four" />

    <Button
        android:id="@+id/num6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num5"
        android:layout_alignBottom="@+id/num5"
        android:layout_toRightOf="@+id/num5"
        android:text="@string/six" />

    <Button
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num2"
        android:layout_alignBottom="@+id/num2"
        android:layout_alignLeft="@+id/num6"
        android:text="@string/tree" />

    <Button
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num1"
        android:layout_alignBottom="@+id/num1"
        android:layout_toLeftOf="@+id/num3"
        android:text="@string/second" />

    <Button
        android:id="@+id/num10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/equal"
        android:layout_below="@+id/num9"
        android:layout_toLeftOf="@+id/num9"
        android:text="@string/zero" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/num6"
        android:layout_toRightOf="@+id/num6"
        android:text="@string/add" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mult"
        android:layout_below="@+id/mult"
        android:text="@string/div" />

    <Button
        android:id="@+id/num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num4"
        android:layout_alignBottom="@+id/num4"
        android:layout_toRightOf="@+id/num4"
        android:text="@string/five" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/div"
        android:layout_alignBottom="@+id/div"
        android:layout_toLeftOf="@+id/div"
        android:text="@string/equal" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add"
        android:layout_below="@+id/add"
        android:text="@string/sub" />

    <Button
        android:id="@+id/num7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num4"
        android:layout_toLeftOf="@+id/num8"
        android:text="@string/seven" />

    <Button
        android:id="@+id/num8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num6"
        android:layout_toLeftOf="@+id/num6"
        android:text="@string/eight" />

    <Button
        android:id="@+id/num9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num6"
        android:layout_toLeftOf="@+id/mult"
        android:text="@string/nine" />

    <Button
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sub"
        android:layout_below="@+id/sub"
        android:text="@string/mult" />

    <TextView
        android:id="@+id/calculatorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/num1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/add"
        android:gravity="center"
        android:text="@string/display"
        android:textColor="#f00"
        android:textSize="35sp" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/num7"
        android:layout_below="@+id/num7"
        android:layout_toLeftOf="@+id/num10"
        android:text="C" />

</RelativeLayout>